2002-05-26  Clint Adams  <clint@zsh.org>

	* 17234: Completion/Unix/Command/_cvs:
	don't call _path_files with empty ().

2002-05-25  Clint Adams  <clint@zsh.org>

	* 17225: Completion/Unix/Command/_cvs:
	change $CVSIGNORE to $=CVSIGNORE.

2002-05-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 17222: Src/Zle/complist.c: we have to disable 17219 for some
	keys because their code doesn't set up the variables we need

2002-05-24  Peter Stephenson  <pws@csr.com>

	* 17220: Src/Modules/tcp.c: bugs displaying host names and remote
	host address when using `ztcp' to list connections.

2002-05-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 17219: Src/Zle/complist.c: make re-display in menu selection
	faster; redraw only the previously and newly selected matches

2002-05-23 Andrej Borsenkow  <bor@zsh.org>

	* unposted: Completion/Redhat/Command/_service: uncomment
	zstyle now that it works (c.f. 17148)

	* 17125, 17159 (Oliver): Completion/Unix/Command/_texinfo,
	Completion/Unix/Command/.distfiles: completion for info.
	As suggested by Oliver put in _texinfo expecting more
	related stuff.

2002-05-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 17196: Src/Zle/computil.c: report option arguments to
	_arguments in the original form

	* 17214: Completion/Base/Utility/_arguments: for automatic long
	options completion, use the string after the equal signs (from
	the --help-text) as the description to shown when completing
	after the option

	* 17213: Completion/Base/Utility/_describe,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo: rename
	max-match-length style to max-matches-width

	* 17212: Src/Zle/computil.c: allow multiple lines in option
	completion lists to share the same description, for (hopefully)
	cleaner displays

2002-05-23  Clint Adams  <clint@zsh.org>

	* Matt Zimmerman: 17211: Completion/Unix/Command/_cvs:
	respect $CVSIGNORE.

2002-05-21  Peter Stephenson  <pws@csr.com>

	* 17201: Doc/Zsh/mod_tcp.yo: add example use of ztcp.
